# dlt_and_ducklake_example

./: README.md  pyproject.toml  pyrightconfig.json
etl/: config.py  config.yaml
etl/models/: daily_access.sql  popular_contents.sql
src/ducklake_example/: __init__.py  my_pipeline.py  my_source.py
