[project]
name = "ducklake-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "muuuuwa", email = "muuuuwa@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dlt[ducklake,workspace]>=1.20.0",
    "pandas>=2.3.3",
    "sqlmesh[duckdb,ducklake]>=0.228.1",
]

[project.scripts]
ducklake-example = "ducklake_example:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
